need to fix some background color issues with dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@
 /* to remove the margins and stuff on top of the navbar */
 body {
   margin: 0;
+  min-height: 100vh;
 
 }
 
